exports[`<Dashboard /> renders correctly with black theme 1`] = `
<div
  className="bxkLLE">
  <header
    className="dKNVKA">
    <a
      className="gmgior"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="kHaBoX">
      <button
        className="fa fa-bars fIoQlD"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="eMTNN">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fNyzPn"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with black-light theme 1`] = `
<div
  className="bxkLLE">
  <header
    className="dKNVKA">
    <a
      className="gmgior"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="kHaBoX">
      <button
        className="fa fa-bars fIoQlD"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="feLxxV">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fTNHSC"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with blue theme 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="iZvisw"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="cPKxdA">
      <button
        className="fa fa-bars eNPEzI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="eMTNN">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fNyzPn"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with blue-light theme 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="iZvisw"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="cPKxdA">
      <button
        className="fa fa-bars eNPEzI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="feLxxV">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fTNHSC"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with fixed and sidebarMini options 1`] = `
<div
  className="bxkLLE">
  <header
    className="glmcVm">
    <a
      className="iZvisw"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="cPKxdA">
      <button
        className="fa fa-bars eNPEzI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="dJjICI">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="KNTAu"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with fixed option 1`] = `
<div
  className="bxkLLE">
  <header
    className="glmcVm">
    <a
      className="iZvisw"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="cPKxdA">
      <button
        className="fa fa-bars eNPEzI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="dJjICI">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="KNTAu"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with fixed, initialCollapse, and sidebarMini options 1`] = `
<div
  className="bxkLLE">
  <header
    className="glmcVm">
    <a
      className="jpQvr"
      href="/"
      name="navbar-logo">
      <span
        className="gdnkfC"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="bgyKpT"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="haKxdF">
      <button
        className="fa fa-bars eNPEzI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="lgMTFt">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="kvraov"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with green theme 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="iKVAkt"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="gcPMli">
      <button
        className="fa fa-bars biMfWR"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="eMTNN">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fNyzPn"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with green-light theme 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="iKVAkt"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="gcPMli">
      <button
        className="fa fa-bars biMfWR"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="feLxxV">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fTNHSC"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with initialCollapse and sidebarMini options 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="jpQvr"
      href="/"
      name="navbar-logo">
      <span
        className="gdnkfC"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="bgyKpT"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="haKxdF">
      <button
        className="fa fa-bars eNPEzI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="eXBQZb">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="dLNMPq"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with initialCollapse option 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="iZvisw"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="cPKxdA">
      <button
        className="fa fa-bars eNPEzI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="hlQeXc">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="yvELr"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with no options 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="iZvisw"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="cPKxdA">
      <button
        className="fa fa-bars eNPEzI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="eMTNN">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fNyzPn"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with purple theme 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="eyZVfo"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="kwFmkS">
      <button
        className="fa fa-bars btgbpw"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="eMTNN">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fNyzPn"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with purple-light theme 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="eyZVfo"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="kwFmkS">
      <button
        className="fa fa-bars btgbpw"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="feLxxV">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fTNHSC"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with red theme 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="ZVbxS"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="rOyox">
      <button
        className="fa fa-bars jatJFQ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="eMTNN">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fNyzPn"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with red-light theme 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="ZVbxS"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="rOyox">
      <button
        className="fa fa-bars jatJFQ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="feLxxV">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fTNHSC"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with sidebarMini option 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="iZvisw"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="cPKxdA">
      <button
        className="fa fa-bars eNPEzI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="eMTNN">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fNyzPn"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with yellow theme 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="eecIYN"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="fccBMc">
      <button
        className="fa fa-bars gQqvlC"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="eMTNN">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fNyzPn"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with yellow-light theme 1`] = `
<div
  className="bxkLLE">
  <header
    className="Sdzae">
    <a
      className="eecIYN"
      href="/"
      name="navbar-logo">
      <span
        className="ibQovi"
        href="/"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="hboVZB"
        href="/"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="fccBMc">
      <button
        className="fa fa-bars gQqvlC"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="cTsgzF">
        <ul
          className="bAXwxe"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="feLxxV">
    <section
      className="hZXMYD"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="fTNHSC"
    name="content-wrapper" />
</div>
`;
